# Restoring_CUDA_Accuracy

./: .gitignore  CMakeLists.txt  README.md  matrix_simd_mult.cpp  plots.py
benchmarks/: cublasHalfBM.cu  cublasMulBM.cu  cudaMulBM.cu  cudaMulOptBM.cu  simdMulBM.cpp  simdMulOptBM.cpp  wmmaBM.cu  wmmaRestoreBM.cu
cuBLAS_test/: CMakeLists.txt  cublasTest.cu
data/: generate_matrices.cpp  matrix_16_16_16.txt
helloGpu/: helloGPU  helloGPU.cu  makefile  run.sh
include/: compare.h  compareMM.h  cublasMul.h  cudaMul.h  cudaMulOpt.h  matrixParser.cpp  matrixParser.h  matrix_simd_mult.h  matrix_simd_parallel_mult.h  mmul.cuh  mmul.h  simdMM.h  timeMeasurement.h  wmma.h
integral/: CMakeLists.txt  integral  integral.cu  makefile
mains/: cublasMain.cu  cudaMain.cu  cudaMulOptMain.cu  matrix_simd_mult.cpp  matrix_simd_parallel_mult.cpp  simdMulOptMain.cpp  wmmaMain.cu
matrix-multiplication/: CMakeLists.txt  cublasMM.cu  cudaMM.cu  main.cpp  matrix_multiplication.cpp  matrix_multiplication.h  multBrut.cpp  multBrut.h  multBrutXrestoring.cpp  multBrut_main.cpp  wmmaMM.cu
matrix-multiplication-cuda/: CMakeLists.txt  matrix_mul  matrix_multiplication_cuda.cu  run.sh
matrix_multiplication_simd/: matrix_simd_mult.cpp  matrix_simd_parallel_mult.cpp
mm_cuda_optimized/: CMakeLists.txt  matrix_mul.cu  run.sh
mm_optimized/: CMakeLists.txt  matrix_mul.cu
pythonScripts/: benchmarks.py  generateMatrix.py  plots.py
restoring_accuracy/: main.cu  multBrutXrestoring.cpp  restore.cu  restoreMain.cu
run/: runCudaMul.sh  runCudaMulOpt.sh
src/: compare.cpp  compare.cu  compareHalf.cu  cublasMM.cu  cublasMul.cu  cudaMM.cu  cudaMul.cu  cudaMulOpt.cu  generateMatrices.cpp  matrixParser.cpp  matrixParser.cu  matrix_16x16x16.txt  matrix_3x5x2.txt  matrix_4x3x7.txt  matrix_5x6x3.txt  matrix_simd_mult.cpp  matrix_simd_parallel_mult.cpp  mmul.cpp  mmul.cu  simdMM.cpp  wmma.cu  wmmaMM.cu
testing/: CMakeLists.txt  matrix_mult_paprikolu.cpp  test_main.cpp  testing.cpp  testing.h
utils/: CMakeLists.txt  accuracy_comparison.cpp  accuracy_comparison.h  accuracy_plot.py  main.cpp  main.cu  matrixA.txt  matrixB.txt
